@@ -10,6 +10,8 @@ New files or new file pairs added via Add New File are automatically added to so
 Changed key accelerators for common source control from Control + Alt to Control + Alt + Shift due to the newly-added window management shortcuts which clash with the old ones
 When files are added or removed from the repo via the GUI, their partner files are also added/removed.
 Control + Alt + Shift + Up/Down are used to push to/pull from remote repositories
+Add New File now includes templates for .rsrc resource files, generic text files, and bash shell scripts.
+Added an option to choose whether or not header files are automatically added to projects.
 
 Bugfixes
 The dirty file count doesn't change during builds on SMP machines
